--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -1,9 +1,17 @@
 header, main, footer {
-    padding-left: 300px;
+    padding-left: 100px;
 }
 
 ul li a:hover {
     text-decoration: underline;   
+}
+
+logo {
+    margin-right: 100 !important;
+}
+
+.sidenav {
+    width: 100px !important;
 }
 
 @media only screen and (max-width : 992px) {
