cleanup & small features

--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -12,7 +12,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
 @import url(../icons/font-awesome/css/font-awesome.min.css);
 @import url(../icons/simple-line-icons/css/simple-line-icons.css);
-@import url(../icons/weather-icons/css/weather-icons.min.css);
+/* @import url(../icons/weather-icons/css/weather-icons.min.css);
 @import url(../icons/cryptocoins/css/cryptocoins.css);
 @import url(../icons/cryptocoins/css/cryptocoins-colors.css);
 @import url(../icons/linea-icons/linea.css);
@@ -21,9 +21,9 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
 @import url(../icons/flag-icon-css/flag-icon.min.css);
 @import url(../icons/material-design-iconic-font/materialdesignicons.min.css);
 @import url(../icons/pe-icon-set-weather/css/pe-icon-set-weather.min.css);
-@import url(../plugins/animate/animate.min.css);
+@import url(../plugins/animate/animate.min.css); */
 @import url(../plugins/metismenu/css/metisMenu.min.css);
-@import url(../plugins/bootstrap-select/dist/css/bootstrap-select.min.css);
+/* @import url(../plugins/bootstrap-select/dist/css/bootstrap-select.min.css); */
 .gradient-1, .dropdown-mega-menu .ext-link.link-1 a, .morris-hover, .datamaps-hoverover {
   background-image: linear-gradient(230deg, #759bff, #843cf6); }
 
@@ -14715,4 +14715,14 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
+}
+
+.stick-right {
+  right: 15px;
+  top: 16px;
+  position: absolute;
+}
+
+.padding-15 {
+  padding: 15px !important;
 }
