readonly superset permissions added to site modal

--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -218,8 +218,8 @@
                             <div class="modal-body">
                                 <p>We've created a read-only Superset user for demonstration purposes. Use the below username and password to log into Superset.</p>
                                 <ul>
-                                    <li>username: TODO</li>
-                                    <li>password: TODO</li>
+                                    <li>username: sample_user</li>
+                                    <li>password: sample5678!</li>
                                 </ul>
                             </div>
                             <div class="modal-footer">
